Update and rename Oh Memory In Summary Only Self you just as Thought, Thought.html to Oh Memory In Summary Only Self you vary just as Thought, Thought.html

--- a/Oh Memory In Summary Only Self you vary just as Thought, Thought.html
+++ b/Oh Memory In Summary Only Self you vary just as Thought, Thought.html
@@ -28,4 +28,4 @@ isn't it so respected ones#.."
 Pertinence@laughing : "in the name of thoughts indeed#.."
 Ei Lastly Lotus of Facts Bloomed..just as..Thoughts/Tamin' thoughts i tamed my self as tamed.. Thoughts..
 Oh Thoughts Thinkin' Freedom from Thoughts..
-Oh Memory In Summary Only Self you just as Thought, Thought
+Oh Memory In Summary Only Self you vary just as Thought, Thought
