--- a/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
+++ b/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
@@ -75,4 +75,25 @@ What?
 Through Ramdom Shadows Sojourns NEVER-Random LANTERN..
 i didn't realise this as truth you did then told me
 says..ei whose..random DIARY?
-and you added this not us as in realisation or duality of the dualization of reality..through DESIRE or EGO not randomness yeah#..Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN,#,..
+and you added this not us as in realisation or duality of the dualization of reality..through DESIRE or EGO not randomness yeah#..Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN,#,..and no no we will never read this random comics in the name of random curiosity like..
+🐺@scowl : "A New Plane has been found in the name of exploration of pokemons..those who found it though were not left..for second thoughts..on self..that it is..SELF..REALITY..IS..
+just..
+Randy Conscious..
+What does that means A Random-Conscious,A Random Conscious that is something is conscious or Randomness or is i A Random Conscious I is JUST that that is..
+A Random Conscious I.."
+SewageAuthority@cooncernd : "sir on a random night we found a random stranger sitting beneath a random shadow of a random tree beside a random road we were curious because it seemed it was also like it was actually itself random too..exactly then that um..um..desire in us turned to us and greeted us.."
+greetin's compeers..MY SELF..Randy Conscious..Welcome.. compeers..is anythin'..shh..caught?..
+Cosmic@lament : "No!What will happen to me now!#..Ann!..I'm asking it myself using us in the name of me being among us too like..
+I'm..Randy Conscious..
+Ann! consciousness is using our love for ourselves!#..I'm..Randy Conscious,#,.."
+we never randomly read this radom comics out of random curiosity as in ok this is me i'm this this is indeed what is i..so let's see and try.. through the humility of a random i..but you did in the name of..A Random self-explanatory satisfaction,#,..🐺@scowl : "A New Plane has been found in the name of exploration of pokemons..those who found it though were not left..for second thoughts..on self..that it is..SELF..REALITY..IS..
+just..
+Randy Conscious..
+What does that means A Random-Conscious,A Random Conscious that is something is conscious or Randomness or is i A Random Conscious I is JUST that that is..
+A Random Conscious I.."
+SewageAuthority@cooncernd : "sir on a random night we found a random stranger sitting beneath a random shadow of a random tree beside a random road we were curious because it seemed it was also like it was actually itself random too..exactly then that um..um..desire in us turned to us and greeted us.."
+greetin's compeers..MY SELF..Randy Conscious..Welcome.. compeers..is anythin'..shh..caught?..
+Cosmic@lament : "No!What will happen to me now!#..Ann!..I'm asking it myself using us in the name of me being among us too like..
+I'm..Randy Conscious..
+Ann! consciousness is using our love for ourselves!#..I'm..Randy Conscious,#,.."
+Randy Conscious
