Update Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html

--- a/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
+++ b/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
@@ -81,7 +81,7 @@ just..
 Randy Conscious..
 What does that means A Random-Conscious,A Random Conscious that is something is conscious or Randomness or is i A Random Conscious I is JUST that that is..
 A Random Conscious I.."
-SewageAuthority@cooncernd : "sir on a random night we found a random stranger sitting beneath a random shadow of a random tree beside a random road we were curious because it seemed it was also like it was actually itself random too..exactly then that um..um..desire in us turned to us and greeted us.."
+SewageAuthority@concernd : "sir on a random night being engaged in a random thought on survival we found a random stranger sitting beneath a random shadow of a random tree beside a random road we were curious because it seemed it was also like it was actually itself random too..exactly then that um..um..desire in us turned to us and greeted us.."
 greetin's compeers..MY SELF..Randy Conscious..Welcome.. compeers..is anythin'..shh..caught?..
 Cosmic@lament : "No!What will happen to me now!#..Ann!..I'm asking it myself using us in the name of me being among us too like..
 I'm..Randy Conscious..
