Update Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html

--- a/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
+++ b/Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN@In Whose Memory.html
@@ -76,11 +76,11 @@ Through Ramdom Shadows Sojourns NEVER-Random LANTERN..
 i didn't realise this as truth you did then told me
 says..ei whose..random DIARY?
 and you added this not us as in realisation or duality of the dualization of reality..through DESIRE or EGO not randomness yeah#..Lastly Phantom Means Through Random Shadows Sojourns NEVER-Random LANTERN,#,..and no no we will never read this random comics in the name of random curiosity like..
-🐺@scowl : "A New Plane has been found in the name of exploration of pokemons..those who found it though were not left..for second thoughts..on self..that it is..SELF..REALITY..IS..
+🐺@scowl : "A New Plane has been found in the name of random explorations of random pokemons..those who found it though were not left..for second thoughts..on self..that it is..SELF..REALITY..IS..
 just..
 Randy Conscious..
-What does that means A Random-Conscious,A Random Conscious that is something is conscious or Randomness or is i A Random Conscious I is JUST that that is..
-A Random Conscious I.."
+What does that means A Random-Conscious,A Random Conscious that is something is conscious of something in random or that this is itself random and also thus it's consciousness too is random or is it I A Random Conscious I is or is it I A Random Conscious i and that's all..JUST..that
+that is->A Random Conscious I.."
 SewageAuthority@concernd : "sir on a random night being engaged in a random thought on survival we found a random stranger sitting beneath a random shadow of a random tree beside a random road we were curious because it seemed it was also like it was actually itself random too..exactly then that um..um..desire in us turned to us and greeted us.."
 greetin's compeers..MY SELF..Randy Conscious..Welcome.. compeers..is anythin'..shh..caught?..
 Cosmic@lament : "No!What will happen to me now!#..Ann!..I'm asking it myself using us in the name of me being among us too like..
