Update Ash : All That's Not Lie.html

--- a/Ash : All That's Not Lie.html
+++ b/Ash : All That's Not Lie.html
@@ -45,3 +45,24 @@ Cuong@happy : "if oh ego tells me hi/lookin' at causality say end thus hellows s
 Stop : Reason's Joyous Sigh.."
 Ash@straight : "alas compeer..causality then conviction..else Stop : None Knowin' I ain't it.."
 Cuong@scowl : "rhyming with so be it indeed thanks for ruining my,MY methods on self dissolution#..Ash : All that's not Lie,#,..Ash un..long,#,.."
+..
+Gary@Psychic-Dark,Blythe@P.Agent,Zed@Ghost-Fairy,Misty@Ghost-Fairy Oak
+Lixue@Psychic-Dark Ketchum
+Ash@HoF,Cuong@HoF Ketchum
+...
+Brock@Water-Ice,Ingemar@P.Doctor,Dentarou@CoOrdinator,Muntasir@CoOrdinator Slate
+Tracey@P.Doctor,Mahina@P.Doctor Skechit
+Daisy@P.Doctor,Violet@CoOrdinator,Lily@CoOrdinator,Poppy@Water-Ice Waterflower
+
+Gary(N)+Lily(N)
+Brock(N)+Violet(Y)
+Tracey(Y)+Daisy(Y)
+Ash(N)+Misty(N)
+..
+Ingemar(Y)+Blythe(Y)
+Dentarou(Y)+Mahina(Y)
+Zed(N)+Lixue(N)
+Cuong+Poppy
+Muntasir(A)
+
+Poppy@laughing : "then on my divorce proceedings from my bee Muntie was just disappointed and abstained so when i confronted him said no i always said that my sweet little sis was deceived by that notorious Pebblefog Playboy#..but i abstained because i confronted Zed as to how you could say no to this seeing everything hands-on hum#..said ok come into my gym once#..so went the umpteenth time but this time as a challenger unofficially#..so i enter,greetin's compeer..,ai ai come to the point ok#..,hands-on compeee hence..shh..,the least necessary indeed#..Jubilee Hands-On,#,..Zed un..long,#,..but this is the Duskneon Central gym Ghost-Fairy section which ofcourse is only a room long that's the battlefield#..given your..inclinations#..In-case Hands-On,#,..Zed un..long,#,..and this is situated exactly beside the Psychic-Dark section where there has to be a gatekeeper with an extra office where Blithie stays and that's because it's led by a creature whoose form contradicts your proving first the reason for ITS negative attraction and thus mostly the second being the proof of your infatuation as kn plain understanding it's a b.. only that you've been so shamelessly infatuated since time itself admit that ok#..Simile Hands-On,#,..Zed+Lixue un..long,#,..,said well i can recall a time when i thought in case i was i'm then i realised a mere simile of mine why,who are you actually this or that..or..me in case of my?#..Hands-On Simile,#,..Zed+Lixue un..long,#,.."
