Update I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
{Gary+Lily}@Ghost-Dark
{Nakamo+Verity
Oswald+Ushi
Osman+Lixue
Praset+Kealohi
Khayum+Ojasa
Rakim+Oumou
Kibwe+Nirja
Zed+Aruru}@Local
{Batzorig+Ozlem}@Ghost-Dark
{Ole+Acadia
Leo+Itxaro}@Local
{Sekou+Mizn}@Ghost-Dark
Nachum+Saengdao
Isidro+Brishna}@Local
{Ezzard+Inara}@Ghost-Dark
{Imanol+Kianga}@Ghost-Dark
Genkai@Ghost-Dark+Blossom@Local
Sargon@Local+Yagmur@Ghost-Dark
{Guang+Itzel
Maymun+Sonrisa}@Ghost-Dark
Seth@HoF+Poppy@Ghost-Dark
Ayub@Ghost-Dark+Sakura@Local
Tracey@P.Research+Daisy@Ghost-Dark
Cuong@Local+Serena@Accessories
{Drew+May}@Ghost-Dark
David@Ghost-Dark+Melody@Local
{Ujab+Elisa
Bazugh+Sabrina
Muntasir+Olivia
Cherruvue+Udantika}@Ghost-Dark
Cedar@CoOrdinator+Gladys@Ghost-Dark
Jerome@Ghost-Dark+Irene@P.Doctor
Ingemar@P.Doctor+Blythe@CoOrdinator
Orion@Local,Rabia@Local
{Lyra,Milintica,Yildiray,Yingtai}@Security
Wolfgang@Liaison
..Ash Ketchum@Register..
{Yerkebulan+Zeltzin
Guineche+Ophira
Weayaya+Meryl
Ezekiel+Hua
Haithem+Fortuna
Uzuri+Wijdan
Ionut+Pharisa
Atlas+Pearl
Lars+Misty
Ephraim+Hatsumi
Zuen+Freesia
Umbel+Yadira}@Local
{Brock+Violet}@Ghost-Dark
Roy@Local+Riko@CoOrdinator
{Dentarou+Wurud
Adebayo+Mallow}@Ghost-Dark
Luis@Local+Enkhtuya@Ghost-Dark
Peniel@Ghost-Dark+Cynthia@Local
{Adam+Imani
Giovanni+Eunji}@Ghost-Dark
{Lance+Galaxy}@Local
Clemont@Ghost-Dark+Iris@Local
Swarit@Ghost-Dark+Dawn@HoF
{Sarmad+Samantha
Bulent+Tasmeya
Sirichai+Pemba
Oscar+Zoi}@Ghost-Dark
Daxton+Giselle
Nigel+Olga}@Ghost-Dark
Stuart@Local+Ibriz@Ghost-Dark
Satoshi@Accessories+Aurora@Ghost-Dark
Kaipo@P.Doctor+Lana@P.Research
{Pacari+Lifen}@Ghost-Dark
Kumaglak@CoOrdinator+Perkha@P.Doctor
{Arnold+Flavia}@Ghost-Dark
{Chaewon,Gaydarbek,Lahab,Rumla}@Security

Gary,Zeltzin,Ophira,Hua,Wijdan,Fortuna,Meryl,Verity,Kealohi,Ojasa,Oumou,Aruru,Ushi,Lixue,Nirja,Pharisa,Pearl,Hatsumi,Yadira,Freesia,Misty,Ozlem,Mizn,Saengdao,Brishna,Kiang

--- a/I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
+++ b/I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
@@ -64,7 +64,7 @@ Bulent+Tasmeya
 Sirichai+Pemba
 Oscar+Zoi}@Ghost-Dark
 Daxton+Giselle
-Samson+Olga}@Ghost-Dark
+Nigel+Olga}@Ghost-Dark
 Stuart@Local+Ibriz@Ghost-Dark
 Satoshi@Accessories+Aurora@Ghost-Dark
 Kaipo@P.Doctor+Lana@P.Research
@@ -84,7 +84,7 @@ Maymun,Eunji,Adebayo,Zoi Plavjar
 Brock,Blythe,Bulent,Oscar,Lyra,Milintica,Chaewon,Gaydarbek,Lahab,Rumla,Yildiray,Yingtai,David,Adam,Iris,Roy Slate
 Tracey,Olga Skechit
 Sabrina,Kumaglak,Cynthia,Jerome,Lifen,Satoshi,Galaxy,Sarmad,Daxton,Ibriz,Ujab,Pemba,Muntasir,May,Ayub,Imani McShin
-Ingemar,Cedar,Enkhtuya,Sirichai,Samson,Peniel,Drew,Dawn Flemming
+Ingemar,Cedar,Enkhtuya,Sirichai,Nigel,Peniel,Drew,Dawn Flemming
 Dentarou,Tasmeya,Arnold,Perkha,Lance,Samantha,Stuart,Irene,Luis,Giselle,Pacari,Olivia,Kaipo,Melody,Clemont,Elisa Bujona
 Daisy,Violet,Lily,Poppy,Sakura,Riko,Wurud,Mallow Waterflower
 
