Update I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
{Gary+Lily}@Ghost-Dark
{Nakamo+Verity
Oswald+Ushi
Osman+Lixue
Praset+Kealohi
Khayum+Ojasa
Rakim+Oumou
Kibwe+Nirja
Zed+Aruru}@Local
{Batzorig+Ozlem}@Ghost-Dark
{Ole+Acadia
Leo+Itxaro}@Local
{Sekou+Mizn}@Ghost-Dark
Nachum+Saengdao
Isidro+Brishna}@Local
{Ezzard+Inara}@Ghost-Dark
{Imanol+Kianga}@Ghost-Dark
Genkai@Ghost-Dark+Blossom@Local
Sargon@Local+Yagmur@Ghost-Dark
{Guang+Itzel
Maymun+Sonrisa}@Ghost-Dark
Seth@HoF+Poppy@Ghost-Dark
Ayub@Ghost-Dark+Sakura@Local
Tracey@P.Research+Daisy@Ghost-Dark
Cuong@Local+Serena@Accessories
{Drew+May}@Ghost-Dark
David@Ghost-Dark+Melody@Local
{Ujab+Elisa
Bazugh+Sabrina
Muntasir+Olivia
Cherruvue+Udantika}@Ghost-Dark
Cedar@CoOrdinator+Gladys@Ghost-Dark
Jerome@Ghost-Dark+Irene@P.Doctor
Ingemar@P.Doctor+Blythe@CoOrdinator
{Udup+Nancy}@Local
{Lyra,Milintica,Yildiray,Yingtai}@Security
Orion@Manager
..Ash Ketchum@Register..
{Yerkebulan+Zeltzin
Guineche+Ophira
Weayaya+Meryl
Ezekiel+Hua
Haithem+Fortuna
Uzuri+Wijdan
Ionut+Pharisa
Atlas+Pearl
Lars+Misty
Ephraim+Hatsumi
Zuen+Freesia
Umbel+Yadira}@Local
{Brock+Violet}@Ghost-Dark
Roy@Local+Riko@CoOrdinator
{Dentarou+Wurud
Adebayo+Mallow}@Ghost-Dark
Luis@Local+Enkhtuya@Ghost-Dark
Peniel@Ghost-Dark+Cynthia@Local
{Adam+Imani
Giovanni+Eunji}@Ghost-Dark
{Lance+Galaxy}@Local
Clemont@Ghost-Dark+Iris@Local
Swarit@Ghost-Dark+Dawn@HoF
{Sarmad+Samantha
Bulent+Tasmeya
Sirichai+Pemba
Oscar+Zoi}@Ghost-Dark
Daxton+Giselle
Samson+Olga}@Ghost-Dark
Stuart@Local+Ibriz@Ghost-Dark
Satoshi@Accessories+Aurora@Ghost-Dark
Kaipo@P.Doctor+Lana@P.Research
{Pacari+Lifen}@Ghost-Dark
Kumaglak@CoOrdinator+Perkha@P.Doctor
{Arnold+Flavia}@Ghost-Dark
{Chaewon,Gaydarbek,Lahab,Rumla}@Security
Rabia@Manager

Gary,Zeltzin,Ophira,Hua,Wijdan,Fortuna,Meryl,Verity,Kealohi,Ojasa,Oumou,Aruru,Ushi,Lixue,Nirja,Pharisa,Pearl,Hatsumi,Yadira,Freesia,Misty,Ozlem,Mizn,Saengdao,Brish

--- a/I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
+++ b/I in Reality's Game Am Playing Reality Reality Game@The Unfolding of the Me-feeler.html
@@ -32,7 +32,7 @@ Cherruvue+Udantika}@Ghost-Dark
 Cedar@CoOrdinator+Gladys@Ghost-Dark
 Jerome@Ghost-Dark+Irene@P.Doctor
 Ingemar@P.Doctor+Blythe@CoOrdinator
-{Nigel+Nancy}@Local
+{Udup+Nancy}@Local
 {Lyra,Milintica,Yildiray,Yingtai}@Security
 Orion@Manager
 ..Ash Ketchum@Register..
@@ -78,7 +78,7 @@ Gary,Zeltzin,Ophira,Hua,Wijdan,Fortuna,Meryl,Verity,Kealohi,Ojasa,Oumou,Aruru,Us
 Blossom,Guineche,Yerkebulan,Weayaya,Haithem,Uzuri,Ezekiel,Oswald,Osman,Praset,Nakamo,Kibwe,Khayum,Rakim,Zed,Atlas,Ionut,Lars,Zuen,Umbel,Ephraim,Ole,Leo,Sekou,Batzorig,Ezzard,Nachum,Isidro,Imanol,Cuong,Seth,Cherruvue Iptil
 Genkai,Orion,Rabia,Lana Tanaka
 Guang,Sargon,Aurora,Flavia,Maymun,Giovanni,Udantika,Gladys Latham
-Nigel,Eunji,Bazugh,Serena Ortiz
+Udup,Eunji,Bazugh,Serena Ortiz
 Adebayo,Zoi,Nancy,Swarit Plavjar
 [Wolfgang Bistorter]
 ..Ash Ketchum..
