Update A Primer on Ego through Selfness Similes.html
----
Ujab@giggle : "hey Florie why don't we battle culmination of understanding and habit enforced judgement#..Flora..The Undual Jabs,#,..Ujab un..long,#,..
Flora@scowl : "your existence emanates a disturbing vibe of self adjudgements cognizable from the effect of your attempts to choose a notion to direct the results you found upon self adjudgements whereas you intentionally asked me for only self considerations to trap me to think your ways not my thinking on your ways hence i refuse to accept it"
Marc@thoughtful : "excuse me compeer but i was looking for a practice match.."
Flora@giggle : "shut up you self consulting b.. iiii!..no this is not shoulders like mine#..Ujab..Own Ownership Obsession,#,..Flora un..long,#,.."
Marc@irritated,trying to control Flora who is too happy and tries to ride on Marc's shoulders : "no this is a parametric duality Florie that uses a distinction between me and my not just i and i-seeing me#..Obsession with the Signs of Self Demarcations for Own Ownership,#,..Marc+Flora un..long,#,.."
Delia@unhappy : "no Cuo i'm happy that all my versions are well organized in practical reconsiderations of duality but..Pulu never meets me existentially#..The Fringes of Selfness,#,..Delia un..long,#,.."
Cuong@happy : "no it's more akin to..shh..injunctions of premises on applicable commitments..shh..so breathholding#..Caution!Boy Yonder,#,..Cuong un..long,#,.."
Luis@happy : "hence..some some rhymes for selfness that's i'm/oh my Pulu pencil..thus..whereas my am.."
Delia@too happy,trying to dance with Paul : "iiii!..hey Pulu why you exist opposite to me.."
Paul@scowl,taking Delia away : "for conception fighting is infeasible with..conditionals sans mine,#,..Fight of Selfhood and Essential Self,#,..Luis un..long,#,.."
Baiza@giggle : "you you you..are you as my me/reason fails to find i,am i not my i/reality thus fails if i try..
to be my my my..my i..
iii!..hey Ignu do you know this song fr

--- a/A Primer on Ego through Selfness Similes.html
+++ b/A Primer on Ego through Selfness Similes.html
@@ -1,6 +1,3 @@
-
-
-
 ----
 Ujab@giggle : "hey Florie why don't we battle culmination of understanding and habit enforced judgement#..Flora..The Undual Jabs,#,..Ujab un..long,#,..
 Flora@scowl : "your existence emanates a disturbing vibe of self adjudgements cognizable from the effect of your attempts to choose a notion to direct the results you found upon self adjudgements whereas you intentionally asked me for only self considerations to trap me to think your ways not my thinking on your ways hence i refuse to accept it"
@@ -16,8 +13,9 @@ Baiza@giggle : "you you you..are you as my me/reason fails to find i,am i not my
 to be my my my..my i..
 iii!..hey Ignu do you know this song from the Days of Simile#.. Question Hold Self Steadfast!Tranquility Chats for Answer Lust,#,..Lixue un..long,#,.."
 Egan@scowl : "i know what actually provokes this..under the mask of the i-th turn for me to say i#..Egan..i afraid despite holding a contract you won't recognise that creature Simile Popcorn in existence because you never meet,skip..consciousness for if..
-if my so i/though thought am i/reality jolts/you you oh my i/hence knowledge of self/doubting else/that in why selfness test/self-ish essences..,
-that's..Race..Endow!..
+if my so i/though thought am i/reality jolts/you you oh my i/hence knowledge of self/doubting else/that in why selfness test/self-ish essences..
+thu!
+.Race..Endow!..
 If if if if if i/means egoness or i?/am i my-own seeing i/find find racing i..
 am i my own i/racing am i for seeking i/upon doubt over my own i/races i against me..seeing oh my,my own i..
-any reality..bewitched,Ego on Twist indeed,#,..A Primer on Ego through Selfness Similes,#,..Osman+Lixue un..long,#,.."
+any reality..bewitched,Ego on Twist indeed hence only that unpardonable Simile of the Unforgivable Inattention to Consciousness-less which,#,..A Primer on Ego through Selfness Similes,#,..Osman+Lixue un..long,#,.."
