--- a/A Primer on Ego through Selfness Similes.html
+++ b/A Primer on Ego through Selfness Similes.html
@@ -1,8 +1,8 @@
-Ujab@giggle : "hey Florie why don't we battle culmination of understanding and habit enforced judgement#..Flora..The Undual Jabs,#,..Ujab un..long,#,..
-Flora@scowl : "your existence emanates a disturbing vibe of self adjudgements cognizable from the effect of your attempts to choose a notion to direct the results you found upon self adjudgements whereas you intentionally asked me for only self considerations to trap me to think your ways not my thinking on your ways hence i refuse to accept it"
+Ujab@giggle : "hey Florie why don't we battle culmination of understanding and habit enforced judgement#..Lyra..The Undual Jabs,#,..Ujab un..long,#,..
+Lyra@scowl : "your existence emanates a disturbing vibe of self adjudgements cognizable from the effect of your attempts to choose a notion to direct the results you found upon self adjudgements whereas you intentionally asked me for only self considerations to trap me to think your ways not my thinking on your ways hence i refuse to accept it"
 Marcus@thoughtful : "excuse me compeer but i was looking for a practice match.."
-Flora@giggle : "shut up you self consulting b.. iiii!..no this is not shoulders like mine#..Ujab..Own Ownership Obsession,#,..Flora un..long,#,.."
-Marcus@irritated,trying to control Flora who is too happy and tries to ride on Marcus's shoulders : "no this is a parametric duality Florie that uses a distinction between me and my not just i and i-seeing me#..Obsession with the Signs of Self Demarcations for Own Ownership,#,..Marcus+Flora un..long,#,.."
+Lyra@giggle : "shut up you self consulting b.. iiii!..no this is not shoulders like mine#..Ujab..Pure Self's Lyrics Obsession,#,..Lyra un..long,#,.."
+Marcus@irritated,trying to control Lyra who is too happy and tries to ride on Marcus's shoulders : "no this is a parametric duality Florie that uses a distinction between me and my not just i and i-seeing me#..Obsession with the Signs of Self Demarcations for Self's Own Lyrics on ownself,#,..Marcus+Lyra un..long,#,.."
 Delia@unhappy : "no Cuo i'm happy that all my versions are well organized in practical reconsiderations of duality but..Pulu never meets me existentially#..The Fringes of Selfness,#,..Delia un..long,#,.."
 Cuong@happy : "no it's more akin to..shh..injunctions of premises on applicable commitments..shh..so breathholding#..Caution!Boy Yonder,#,..Cuong un..long,#,.."
 Luis@happy : "hence..some some rhymes for selfness that's i'm/oh my Pulu pencil..thus..whereas my am.."
