Update The Shadowy Challenges of Self-Lantern.html
Challengers@curious : "um..hellow um.. we're looking to challenge for badges at Self Stable Gym Incorporation#..um..what are the formalities as um.. there's no entry point to this place only a barrier#.."
Haukea@happy : "entry point to a barrier is only self compeers you may proceed along..shh..the path of self against the hindrance of metaphysical thence#.."
Challengers@confused : "um..does that mean no..um..no don't make our thoughts suddenly squeeze or twist our noses and don't make our consciousness to tell us like,
Self..Self Self Self is that I?/hum?..hence! hence hence hence..hence am i searching my i?..
no we didn't sing it our consciousness as if not our i but it's us did#.."
Challengers@scared : "um..but there's no exit point as well.."
Haukea@happy : "countering the sides of self symmetry ofcourse.."
Cosmic@angry : "ai ai behave properly in duality#..A Reset to Self Session,#,..Haukea un..long,#,.."
Challenges@timid : "um..excuse us.."
Orion@happy : "as you ofcourse.."
Challengers@scared : "ann! It was a true story this is a gym hunted by me like existences#..The Living Hunters,#,..Orion un..long,#,.."
Orion@straight : "thus as you're too delicate to forsake idealism you may contact..Mrs. Poppy Waterflower Iptil for more inputs on..exact only realities#.."
Challengers@scowl : "no we won't waste our day in completely headless obsessive search for non self like selves#..A Symposium on Self Exactness Obsession->Session->Toffee flower,#,..Poppy un..long,#,.."
Orion@happy : "well then as you've had the hidden wish to become familiarised with Mist Far to test self devotion best wishes for awareness on..shh..The Me(s) that said not quite#.."
Upon Duality's Thunder/Self seeking Action's Blunder/as look i remain me/so?..Mist Mist real me..Far off from Meh!..
Thus means Mist Far/Upon Seer Founder..
Challengers@too scared,holding rosaries : "no no you can't do anything to us as we've always practiced

--- a/The Shadowy Challenges of Self-Lantern.html
+++ b/The Shadowy Challenges of Self-Lantern.html
@@ -22,8 +22,8 @@ Cosmic@scowl : "atleast these sweet little beings could've been made conscious o
 Aruru@happy : "so to speak/caution self/reseeting to i/thus oh chore/today's self lure.."
 Zed@happy : "jubilee's i never my.."
 Challengers@waking up in own houses on a random night : "um..no we didn't have anything to eat so fell asleep of tiredness we want to be Pokemon trainers but um..um..how can we be feeling so well fed and well nourished in terms of enthusiasms and pragmatisms#.. Consciousness Caution!A Self Countering Chore for Today's Jubilee on Run,#,..Zed+Aruru un..long,#,.."
-OtherChallengers@frown : "we only come to have a showdown with that creature Nirja Oak Iptil a pointer only to selfness challenges thus no status as me#..we want to see how that creature can challenge our hard work to live upto honesty#.."
+OtherChallengers@frown : "we only come to have a showdown with that creature Nitocris Oak Iptil a pointer only to selfness challenges thus no status as me#..we want to see how that creature can challenge our hard work to live upto honesty#.."
 If a sound of AM/Go to my camp/I or a goer see for self is that another's am..
 Challenge Self halt just shadow challenge/me..shuu.. conscious shadows challenge/to be me challenge/Lantern then own challenge..
 greetings compeers did you expect to sense something apart from you.. Challengers@timid,holding their rosaries : "no we always practice our rosaries..um..but we still fell asleep um..but why we feel so refreshed from un..being us#.."
-Cosmic@angry : "ai ai use a proper form to transact into duality not just existence#..The Shadowy Challenges of Self-Lantern,#,..Nirja un..long,#,.."
+Cosmic@angry : "ai ai use a proper form to transact into duality not just existence#..The Shadowy Challenges of Self-Lantern,#,..Nitocris un..long,#,..besides why you're never found with your involuntary objectivity to self hum#..All-Nitocris..A Self So Thing thus am just being what's so strang..shh..in self contained effect's self of self's own self seeing, security!..#..Effect Contain The Lantern to the Shadows of Self,#,..Kibwe+Nitocris un..long,#,.."
